# sdc-tools

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  app.py  checker.py  cli.py  clock_relations.py  constraint_diff.py  corner_manager.py  coverage.py  custom_rules.py  custom_rules_example.yaml  example.sdc  generator.py  mmc.py  pyproject.toml  reporter.py  rules_registry.py  sdc-tools.cmd  tcl_resolver.py  wildcard_analyzer.py
.pre-commit-hooks/: sdc-check.sh
docs/features/: README-01-checker.md  README-02-generator.md  README-03-diff.md  README-04-clock-relations.md  README-05-mmc.md  README-06-coverage.md  README-07-custom-rules.md  README-08-rules-registry.md  README-09-reports.md  README-10-web-ui.md
samples/: clock_relations.sdc  constraint_diff_v1.sdc  constraint_diff_v2.sdc  variables_v1.tcl  variables_v2.tcl
