[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sdc-tools"
version = "1.2.0"
description = "Validate, generate, and analyze Synopsys Design Constraint (SDC) files — no EDA tool required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["sdc", "vlsi", "timing", "constraints", "synopsys", "eda", "signoff"]
authors = [
    {name = "RAMA-L7"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.35"]
dev = ["pre-commit>=3.0"]
all = ["streamlit>=1.35", "pre-commit>=3.0"]

[project.urls]
"Homepage" = "https://github.com/RAMA-L7/sdc-tools"
"Repository" = "https://github.com/RAMA-L7/sdc-tools.git"
"Live Demo" = "https://sdc-tools.streamlit.app"
"Bug Tracker" = "https://github.com/RAMA-L7/sdc-tools/issues"

[project.scripts]
sdc-tools = "cli:main"

[tool.setuptools]
py-modules = [
    "cli", "checker", "generator", "corner_manager", "mmc",
    "tcl_resolver", "wildcard_analyzer", "constraint_diff",
    "clock_relations", "rules_registry", "reporter",
    "coverage", "custom_rules",
]
include-package-data = true

[tool.setuptools.package-data]
* = ["*.yaml", "*.sdc", "*.tcl", ".pre-commit-config.yaml"]

[tool.setuptools.data-files]
".pre-commit-hooks" = [".pre-commit-hooks/sdc-check.sh"]